src/main/java/com/example/githubrepos/api/error/exception/UserNameNotFoundException.java
package com.example.githubrepos.api.error.exception;

public class UserNameNotFoundException extends RuntimeException {
    public UserNameNotFoundException(String exception) {
        super(exception);
    }
}
